--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+	<link rel="manifest" href="favicon/site.webmanifest">
+	<link rel="shortcut icon" href="https://icons.getbootstrap.com/icons/people-fill/" type="image/x-icon">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 	<script src="app.js" defer></script>
 	<title>Users list</title>
 </head>
 <body class="bg-dark text-white">
 <div class="container py-5">
+	<h2 class="text-center text-uppercase mb-3">Users list</h2>
 	<input id="input" type="text" class="form-control w-100" placeholder="Enter name...">
-	<ul id="list" class="list-group my-5">
-		<li class="list-group-item list-group-item-action list-group-item-primary">Success item</li>
-		<li class="list-group-item list-group-item-action list-group-item-light">Success item</li>
-		<li class="list-group-item list-group-item-action list-group-item-primary">Success item</li>
-		<li class="list-group-item list-group-item-action list-group-item-light">Success item</li>
-	</ul>
+	<ul id="list" class="list-group my-5"></ul>
 </div>
 </body>
 </html>
